fix : restful api guideline - `/user` -> `/users` - `/event` -> `/events`
`/users/{id}`: Represents a collection of users, with the specific user identified by `{id}`.
While `/user/{id}` would represent a single user.
